2008-10-22 21:37  lars

	* po/da.po: update-po

2008-10-22 21:37  lars

	* po/ChangeLog, po/LINGUAS: update-po

2008-06-22 10:02  mmassonnet

	* po/ChangeLog, po/LINGUAS, po/id.po: update-po

2008-05-17 22:35  mmassonnet

	* po/ChangeLog, po/sk.po: update translation

2008-04-12 09:56  mmassonnet

	* po/ChangeLog, po/lv.po: Update Latvian translation

2008-02-15 13:39  mmassonnet

	* po/LINGUAS: Add si to LINGUAS

2008-02-14 22:55  stephan

	* po/ChangeLog, po/si.po: Add Sinhala translations by Rashan
	  Anushka <rashan.uoc@gmail.com>

2007-12-23 16:50  pollux

	* po/ChangeLog, po/sq.po: Updated Albanian translations by Besnik
	  Bleta <bbleta@otenet.gr>

2007-12-02 16:49  maximilian

	* po/ChangeLog, po/es.po: Spanish translations branch updates and
	  German translations trunk updates

2007-11-17 18:42  kelnos

	* ChangeLog: update changelogs; ready to tag 4.4.2

2007-11-17 17:47  kelnos

	* INSTALL: various pre-release updates - po files, docs, etc.
	  mainly autogenerated stuff

2007-11-16 21:07  pollux

	* NEWS: Updated NEWS

2007-11-16 20:59  pollux

	* po/ChangeLog, po/ro.po: Updated Romanian translations by Mişu
	  Moldovan <dumol@gnome.ro>

2007-11-16 10:44  nick

	* NEWS: Whoops typo

2007-11-16 10:44  nick

	* NEWS: Update NEWS

2007-11-15 09:35  mmassonnet

	* po/ChangeLog, po/pt_PT.po: Update pt_PT

2007-11-11 03:27  mmassonnet

	* po/ChangeLog, po/LINGUAS, po/lv.po: Add latvian translation to
	  4.4 branch

2007-11-03 10:25  maximilian

	* po/ChangeLog, po/it.po, po/nb_NO.po: French, Italian, Norwegian
	  Bokmal Updates in some branch 4.4 modules and French translation
	  updates in some trunk modules.

2007-11-01 22:26  kelnos

	* po/am.po, po/ar.po, po/az.po, po/be.po, po/bg.po, po/bn_IN.po,
	  po/ca.po, po/cs.po, po/de.po, po/dz.po, po/el.po, po/en_GB.po,
	  po/es.po, po/es_MX.po, po/et.po, po/eu.po, po/fa.po, po/fi.po,
	  po/fr.po, po/gl.po, po/gu.po, po/he.po, po/hi.po, po/hu.po,
	  po/hy.po, po/ja.po, po/ka.po, po/ko.po, po/lt.po, po/mk.po,