@@ -1,3 +1,7 @@
+2009-01-11 15:47  dannym
+
+	* add "src/xfce4-mixer.desktop.in".
+
 2008-10-22 21:37  lars
 
 	* po/da.po: update-po
